# OpenMVO

./: CMakeLists.txt  README.md  version_prefix.txt
apps/: CMakeLists.txt
apps/depth_filter_app/: CMakeLists.txt  depth_filter_app.cpp
apps/feature_detector/: CMakeLists.txt  feature_detector.cpp  feature_detector.cpp~
apps/image_align/: CMakeLists.txt  image_align.cpp
apps/initial_position/: CMakeLists.txt  initial_position.cpp
apps/pipeline/: CMakeLists.txt  pipeline.cpp
apps/pose_and_structure/: CMakeLists.txt  pose_and_structure.cpp
apps/reprojection/: CMakeLists.txt  reprojection.cpp
cmake/: AssureCMakeRootFile.cmake  DeclareOPENMVOLib.cmake  UtilsMacros.cmake  script_create_config_h.cmake  script_create_openmvo_config.cmake  script_create_version_h.cmake  script_eigen.cmake  script_fast.cmake  script_gtest.cmake  script_version_number.cmake
libs/: CMakeLists.txt
libs/base/: CMakeLists.txt
libs/base/include/: base_precomp.h
libs/base/include/openmvo/base/: link_pragmas.h
libs/base/include/openmvo/math/: nlls_solver.h  nlls_solver_impl.hpp  robust_cost.h
libs/base/include/openmvo/utils/: aligned_mem.h  boost_join.h  cmd_line.h  file_reader.h  image_utils.h  math_utils.h  noncopyable.h  timer.h
libs/base/src/: base_precomp.cpp
libs/base/src/math/: robust_cost.cpp
libs/base/src/utils/: math_utils.cpp  timer.cpp
libs/mvo/: CMakeLists.txt
libs/mvo/include/openmvo/mvo/: abstract_camera.h  abstract_detector.h  blender_utils.h  config.h  depth_filter.h  fast_detector.h  feature.h  feature_alignment.h  frame.h  frame_handler_base.h  frame_handler_mono.h  homography.h  initialization.h  link_pragmas.h  map.h  matcher.h  patch_score.h  pinhole_camera.h  point3d.h  pose_optimizer.h  reprojector.h  sparse_img_align.h  structure_optimizer.h
libs/mvo/src/: abstract_detector.cpp  config.cpp  depth_filter.cpp  fast_detector.cpp  feature_alignment.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  homography.cpp  initialization.cpp  map.cpp  matcher.cpp  pinhole_camera.cpp  point3d.cpp  pose_optimizer.cpp  reprojector.cpp  sparse_img_align.cpp  structure_optimizer.cpp
parse-files/: config.h.in  version.h.in
